fixed banner tagline overflow to right bug. | From fixed padding hard code to display-flex with centering properties

--- a/src/css/Banner.css
+++ b/src/css/Banner.css
@@ -18,7 +18,6 @@
     height: 68px;
     font-weight: 700;
     letter-spacing: 0.8px;
-    padding: 20px 28px;
     background: linear-gradient(
         to right top,
         #5f23cf5e,
@@ -27,11 +26,12 @@
         #a526d3d0,
         #b929d4
     );
-
+    justify-content: center;
+    align-items: center;
     border: 1px solid rgba(255, 255, 255, 0.5);
     font-size: 20px;
     margin-bottom: 16px;
-    display: inline-block;
+    display: flex;
     color: #f5f3fa;
     animation: tagline_animate 3s ease-in-out infinite 1s;
 }
